--- a/angu17035/package.json
+++ b/angu17035/package.json
@@ -21,6 +21,7 @@
     "@ionic/angular": "^7.0.9",
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.2.3",
+    "ng-starrating": "^1.0.20",
     "postcss-scss": "^4.0.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.2",
@@ -29,7 +30,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
