--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "@angular/core": "^16.0.4",
+    "@angular/router": "^16.0.4",
+    "@ionic/angular": "^7.0.10",
+    "angular-star-rating": "^6.0.0",
+    "bootstrap": "^5.2.3",
+    "npm-git-install": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.2"
   }
 }
