--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "strict": true,
-    "outDir": "./built",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true
-  },
-  "include": ["src/**/*"],
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "target": "es2015",
+        "lib": [
+            "es2015"
+        ],
+        "types": [
+          "jasmine"
+        ]
+    }
 }
