--- a/back-end-mongoose/package.json
+++ b/back-end-mongoose/package.json
@@ -27,8 +27,10 @@
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
-        "mongoose-paginate-v2": "^1.7.1",
-        "vite": "^4.1.4",
+        "mongoose-paginate-v2": "^1.7.1"
+    },
+    "devDependencies": {
+        "vite": "^4.3.9",
         "vite-plugin-node": "^3.0.2"
     }
 }
